[package]
name = "indextree-ng"
version = "1.0.1"
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "index", "indextree", "trie"]
authors = ["Sascha Grunert <mail@saschagruenrt.de>", "Karsten König <grayfox@outerhaven.de>"]
repository = "https://github.com/raymontag/indextree"
homepage = "https://github.com/raymontag/indextree"
documentation = "https://docs.rs/indextree-ng"
description = "Arena based tree structure by using indices instead of reference counted pointers. Fork of indextree by Sascha Grunert which allows to remove nodes"
categories = ["data-structures"]

[badges]
travis-ci = { repository = "raymontag/indextree", branch = "master" }

